--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,5 +1,5 @@
 .nav{
-    background-color: gray;
+    background-color:#D9D9D9;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -9,10 +9,14 @@
     
     list-style-type: none;
     display: flex;
+    color: black;
 }
 .right-side ul li a {
     padding:0 20px;
     text-decoration: none;
+    font-size: 20px;
+    font-weight: 500;
+    font-style: normal;
 }
 
 
@@ -20,4 +24,12 @@
     width: 70px;
     height: 70px;
     flex:50%;
+}
+
+@media screen and (max-width: 768px){
+.nav .right-side{
+    display: none;
+}
+
+    
 }
