added background image

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 .App {
-  /* display: flex;
+  margin: 0;
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
-  ; */
+  ;
 }
 
 
