--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -17,8 +17,14 @@
     font-size: 20px;
     font-weight: 500;
     font-style: normal;
+    color: black;
 }
-
+.bars-icon{
+    display: none;
+}
+.hidden-link{
+    display: none;
+}
 
 #img{
     width: 70px;
@@ -29,6 +35,11 @@
 @media screen and (max-width: 768px){
 .nav .right-side{
     display: none;
+}
+.bars-icon{
+    display: block;
+    color: white;
+    font-size: 30px;
 }
 
     
