--- a/src/components/Slider/index.css
+++ b/src/components/Slider/index.css
@@ -43,3 +43,19 @@
   top: 200px;
   left: 40%;
 }
+.next:hover{
+  font-size: 1rem;
+  border-radius: 50px;
+    height: 2rem;
+    width: 2rem;
+    transition: 0.3s;
+    cursor: pointer;
+}
+.prev:hover {
+  font-size: 1rem;
+  border-radius: 50px;
+  height: 2rem;
+  width: 2rem;
+  transition: 0.3s;
+  cursor: pointer;
+}
