--- a/src/components/Slider/index.css
+++ b/src/components/Slider/index.css
@@ -25,7 +25,7 @@
 }
 .next {
   color: rgb(30, 193, 41);
-  font-size: 3rem;
+  font-size: 2rem;
   right: 10px;
   position: absolute;
   background-color: rgb(235, 235, 244);
@@ -37,7 +37,7 @@
   /* width: 100%; */
 }
 .content {
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 500;
   position: absolute;
   color: rgb(255, 251, 251);
@@ -48,16 +48,30 @@
 .next:hover{
   font-size: 1rem;
   border-radius: 50px;
-    height: 2rem;
-    width: 2rem;
+    height: 1rem;
+    width: 1rem;
     transition: 0.3s;
     cursor: pointer;
 }
 .prev:hover {
   font-size: 1rem;
   border-radius: 50px;
-  height: 2rem;
-  width: 2rem;
+  height: 1rem;
+  width: 1rem;
   transition: 0.3s;
   cursor: pointer;
+}
+
+@media screen and (min-width: 468px){
+.content {
+    font-size: 1.5rem;
+    font-weight: 500;
+    position: absolute;
+    color: rgb(255, 251, 251);
+    top: 200px;
+    left: 20px;
+    z-index: 999;
+  }
+
+  
 }
