--- a/src/components/Slider/index.css
+++ b/src/components/Slider/index.css
@@ -5,12 +5,14 @@
   overflow: hidden;
 }
 .img-content {
-  height: 500px;
+  height: 550px;
 }
 .img-content img {
   height: 100%;
   width: 100%;
   padding: 0;
+  opacity: 0.8;
+  /* background-color: black ; */
 }
 .prev {
   color: rgb(30, 193, 41);
@@ -22,6 +24,7 @@
   left: 20px;
   position: absolute;
   top: 200px;
+  z-index:1000 ;
   /* width: 100%; */
 }
 .next {
@@ -34,7 +37,7 @@
   border-radius: 50px;
   height: 3rem;
   width: 3rem;
-  z-index: 999;
+  z-index: 1000;
   /* width: 100%; */
 }
 .content {
@@ -44,23 +47,23 @@
   color: rgb(255, 251, 251);
   top: 200px;
   left: 40%;
-  z-index: 999;
+  /* z-index: 1000; */
 }
-.next:hover{
+/* .next:hover{
   font-size: 1rem;
   border-radius: 50px;
     height: 1rem;
     width: 1rem;
     transition: 0.3s;
     cursor: pointer;
-}
-.prev:hover {
+} */
+/* .prev:hover {
   font-size: 1rem;
   border-radius: 50px;
   height: 1rem;
   width: 1rem;
   transition: 0.3s;
   cursor: pointer;
-}
+} */
 
 
