--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -1,15 +1,24 @@
-form input{
-    padding: 10px;
-    outline: none;
-    border-radius: 3px;
-    width: 200px;
-    margin: 10px;
+form input {
+  padding: 10px;
+  outline: none;
+  border-radius: 3px;
+  width: 200px;
+  margin: 10px;
 }
 form button {
-    padding: 10px;
-    background-color: blue;
-    color: white;
+  padding: 10px;
+  background-color: blue;
+  color: white;
+  outline: none;
+  border-radius: 3px;
+  border: none;
+}
+@media screen and (max-width: 768px) {
+  form input {
+    padding:  9px 0;
     outline: none;
     border-radius: 3px;
-    border: none;
+    width: 150px;
+    margin: 10px;
+  }
 }
