--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -4,6 +4,10 @@
     justify-content: space-between;
     align-items: center;
     padding: 3px;
+    /* margin-bottom:0px; */
+        /* width: 100%;
+        position: fixed;
+        top: 0 */
 }
 .right-side ul{
     
@@ -32,7 +36,7 @@
     font-size: 20px;
     position: absolute;
     z-index: 100;
-    transform: translateX(-1500px);
+    transform: translateX(-1650px);
     transition: 0.4s;
     top :2px
 }
@@ -65,7 +69,7 @@ transition: 0.4s;
 
 }
 #close .hidden-link {
-    transform: translateX(-1500px);
+    transform: translateX(-1650px);
     transform: 0.4s;
 }
 
