--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -1,9 +1,9 @@
 form input {
-  padding: 10px;
+  padding: 11px;
   outline: none;
   border-radius: 3px;
   width: 200px;
-  margin: 10px;
+  margin-top: 60px 5px;
 }
 form button {
   padding: 10px;
@@ -13,12 +13,18 @@ form button {
   border-radius: 3px;
   border: none;
 }
+.form-container{
+margin-top: 55px;
+}
 @media screen and (max-width: 768px) {
   form input {
     padding:  9px 0;
     outline: none;
     border-radius: 3px;
     width: 150px;
-    margin: 10px;
+    margin-top: 10px;
   }
+    form{
+      margin: 45px 0;
+    }
 }
