--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -3,7 +3,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 3px;
+    /* padding: 3px; */
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    /* height: 100%; */
+    margin-bottom: 30px;
     /* margin-bottom:0px; */
         /* width: 100%;
         position: fixed;
@@ -59,8 +65,8 @@
 
 
 #img{
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     /* flex:50%; */
 }
 #open .hidden-link{
