--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -3,7 +3,7 @@ form input {
   outline: none;
   border-radius: 3px;
   width: 200px;
-  margin-top: 60px 5px;
+  margin-top: 60px ;
 }
 form button {
   padding: 10px;
